@@ -61,16 +61,6 @@ caption {
     text-align: center;
 }
 
-.g-subalbumTreeElement {
-    vertical-align: middle;
-    white-space: nowrap;
-}
-
-.g-subalbumTreeLine {
-   padding: 0;
-   margin: 0;
-}
-
 .g-accesskey {
     text-decoration: underline;
 }
